--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -3,9 +3,11 @@
 
 <div class="row">
   <div class="col">
+    <!-- (onValue)="searchByCapital($event)" -->
   <shared-search-box
+    [initValue]="initTerm"
     placeholder="Buscar por capital"
-    (onValue)="searchByCapital($event)"
+    (onDebounce)="searchByCapital($event)"
   ></shared-search-box>
   </div>
 </div>
@@ -13,6 +15,7 @@
 <div class="row">
   <div class="col">
     <hr />
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
