--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -3,16 +3,24 @@
 
 <div class="row">
   <div class="col">
-  <shared-search-box
+  <!-- <shared-search-box
     placeholder="Buscar por región"
-    (onValue)="searchByRegion($event)"
-  ></shared-search-box>
+    (onDebounce)="searchByRegion($event)"
+  ></shared-search-box> -->
+
+    <button
+      class="btn mx-2"
+      [ngClass]="{ 'btn-primary': selectedRegion === region}"
+      *ngFor="let region of regions"
+      (click)="searchByRegion(region)"
+    >{{ region }}</button>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
     <hr />
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
