--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,7 +1,9 @@
+<!-- (keyup.enter)="emitValue(txtInput.value) -->
 <input
   type="text"
   [placeholder]="placeholder"
   class="form-control"
   #txtInput
-  (keyup.enter)="emitValue(txtInput.value)"
+  [value]="initValue"
+  (keyup)="onKeyPress(txtInput.value)"
  />
